--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,5 +1,6 @@
-# NodeJS Version 16
-FROM node:16.18-buster-slim
+FROM node:18 as build
+
+RUN apt update && apt install libssl-dev -y --no-install-recommends  
 
 # Copy Dir
 COPY . ./app
@@ -14,6 +15,9 @@ RUN npm install --legacy-peer-deps
 ENV NODE_ENV development
 
 EXPOSE 3000
+
+# RUN npx prisma migrate deploy
+RUN npx prisma generate
 
 # Cmd script
 CMD ["npm", "run", "dev"]
