--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
-version: "3.9"
+version: '3.9'
 
 services:
   proxy:
     container_name: proxy
     image: nginx:alpine
     ports:
-      - "80:80"
+      - '80:80'
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
-    restart: "unless-stopped"
+    restart: 'unless-stopped'
     networks:
       - backend
 
@@ -18,27 +18,36 @@ services:
       context: ./
       dockerfile: Dockerfile.dev
     ports:
-      - "3000:3000"
+      - '3000:3000'
+    env_file: ./.env
     environment:
-      DATABASE_URL: mysql://root:password@localhost:3306/dev
+      - DATABASE_URL=$DATABASE_URL
     volumes:
       - ./:/app
       - /app/node_modules
-    restart: "unless-stopped"
+      - ./prisma:/app/prisma
+    restart: 'unless-stopped'
     networks:
       - backend
     links:
-      - mysql
+      - db
     depends_on:
-      - mysql
+      - db
+    # command: ['npm', 'run', 'prisma:deploy']
 
-  mysql:
-    container_name: mysql
-    image: mysql:5.7
+  db:
+    container_name: db
+    image: postgres
+    restart: unless-stopped
+    env_file: ./.env
     environment:
-      DATABASE_URL: mysql://root:password@localhost:3306/dev
+      - POSTGRES_USER=$POSTGRES_USER
+      - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
+      - POSTGRES_DB=$POSTGRES_DB
     ports:
-      - "3306:3306"
+      - '5432:5432'
+    expose:
+      - '5432'
     networks:
       - backend
 
