--- a/sample.env
+++ b/sample.env
@@ -1,2 +1,6 @@
 # DATABASE
-DATABASE_URL = file:./dev.db
+DATABASE_URL = postgres://postgres:postgres@db:5432/finnhub
+
+POSTGRES_USER: postgres
+POSTGRES_PASSWORD: postgres
+POSTGRES_DB: finnhub
